--- a/src/client/css/main.css
+++ b/src/client/css/main.css
@@ -1,7 +1,5 @@
 body, html {
-    margin: 0px;
-    padding: 0px;
     width: 100%;
     height: 100%;
-    background-color: #FFFFFF;
+    padding-top: 25px;
 }
